--- a/acetest1.html
+++ b/acetest1.html
@@ -9,7 +9,7 @@
         top: 10.2%;
         right: 0;
         bottom: 0;
-        left: 1.8%;
+        left: 1.6%;
 		width: 70%;
 		height: 85.4%;
     }
@@ -20,16 +20,44 @@
 <body style="background-color: black; overflow-x: hidden; overflow-y: hidden">
 
 
-<div id="header" style="background-color: #292929; border: 1px solid grey; height: 635px; padding-top: 10px;">
-	<label style="margin-left: 35px; margin-right: 110px; font-weight: bold; color: #ffffff; font-family: verdana; font-size: 20px"> <u>TOGGLE IDE</u> >> </label>
-	<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> MAIN_FILE </label>
-	<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_A </label>
-	<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_B </label>
-	<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_C </label>
-	<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> TEST_A </label>
-	<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> TEST_B </label>
-	<br><hr>
+<div id = "page" style="background-color: #292929; border: 1px solid grey; height: 635px; padding-top: 10px;">
+	
+	<div id="header">
+		<label style="margin-left: 35px; margin-right: 110px; font-weight: bold; color: #ffffff; font-family: verdana; font-size: 20px"> <u>TOGGLE IDE</u> >> </label>
+		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> MAIN_FILE </label>
+		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_A </label>
+		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_B </label>
+		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_C </label>
+		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> TEST_A </label>
+		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> TEST_B </label>
+	</div><hr>
+	
+	<div id="option_tray" style="background-color: #000000; border: 1px solid grey; width: 346px; height: 570px; margin-right: 14px; margin-top: 7px; float: right;">
+		
+		<div id="buttons" style="background-color: #ffffff; border: 1px solid grey; width: 340px; height: 130px; margin-left: 2px; margin-top: 2px;">
+		
+			<div id="mode"><input type="select" placeholder="MODE" style="width: 48.3%; height: 30px; text-align: center; font-weight: bolder;"></input></div>
+			<div id="theme"><input type="select" placeholder="THEME" style="width: 48.3%; float: right; height: 30px; position: relative; top: -36px; text-align: center; font-weight: bolder;"></input></div>
+			<div id="load"><input type="button" value="LOAD" style="width: 50%; height: 33px; position: relative; top: -36px; font-weight: bolder;"></input></div>
+			<div id="save"><input type="button" value="SAVE" style="width: 50%; float: right; position: relative; top: -69px; height: 33px; font-weight: bolder;"></input></div>
+			<div id="run"><input type="button" value="RUN !" style="width: 100%;  height: 61px; position: relative; top: -69px; font-weight: bold; font-size: 38px;"></input></div>
+			
+		</div>
+		
+		<div id="input" style="background-color: #ffffff; border: 1px solid grey; width: 340px; height: 336px; margin-left: 2px; margin-top: 2px;">
+			<label> Custom input : <label>
+		</div>
+		
+		<div id="output" style="background-color: #ffffff; border: 1px solid grey; width: 340px; height: 90px; margin-left: 2px; margin-top: 2px;">
+			<label> Run this file <label>
+		</div>
+		
+	</div>
+
 </div>
+
+
+
 
 
 
