--- a/acetest1.html
+++ b/acetest1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script src="/JSscripts/functionality.js"></script>
+
 <head>
 <title>TOGGLE IDE</title>
 <style type="text/css" media="screen">
@@ -24,12 +26,12 @@
 	
 	<div id="header">
 		<label style="margin-left: 35px; margin-right: 110px; font-weight: bold; color: #ffffff; font-family: verdana; font-size: 20px"> <u>TOGGLE IDE</u> >> </label>
-		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> MAIN_FILE </label>
-		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_A </label>
-		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_B </label>
-		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_C </label>
-		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> TEST_A </label>
-		<label style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> TEST_B </label>
+		<label onclick="context(this)" id="MAIN_FILE" style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> MAIN_FILE </label>
+		<label onclick="context(this)" id="FILE_A" style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_A </label>
+		<label onclick="context(this)" id="FILE_B" style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_B </label>
+		<label onclick="context(this)" id="FILE_C" style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> FILE_C </label>
+		<label onclick="context(this)" id="TEST_A" style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> TEST_A </label>
+		<label onclick="context(this)" id="TEST_B" style="margin-right: 100px; color: #dddddd; font-weight: bold; font-family: sans-serif"> TEST_B </label>
 	</div><hr>
 	
 	<div id="option_tray" style="background-color: #000000; border: 1px solid grey; width: 346px; height: 570px; margin-right: 14px; margin-top: 7px; float: right;">
@@ -38,8 +40,10 @@
 		
 			<div id="mode"><input type="select" placeholder="MODE" style="width: 48.3%; height: 30px; text-align: center; font-weight: bolder;"></input></div>
 			<div id="theme"><input type="select" placeholder="THEME" style="width: 48.3%; float: right; height: 30px; position: relative; top: -36px; text-align: center; font-weight: bolder;"></input></div>
+			
 			<div id="load"><input type="button" value="LOAD" style="width: 50%; height: 33px; position: relative; top: -36px; font-weight: bolder;"></input></div>
 			<div id="save"><input type="button" value="SAVE" style="width: 50%; float: right; position: relative; top: -69px; height: 33px; font-weight: bolder;"></input></div>
+			
 			<div id="run"><input type="button" value="RUN !" style="width: 100%;  height: 61px; position: relative; top: -69px; font-weight: bold; font-size: 38px;"></input></div>
 			
 		</div>
